<resources>
    <string name="app_name">My Vocabulary Notebook</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="home_title">My Vocabularies</string>

    <string name="vocabulary">Vocabulary</string>
    <string name="translation">Translation</string>
    <string name="sample_sentence">Sample Sentence</string>

    <string name="add_vocabulary">Add</string>
    <string name="update_vocabulary">Update</string>

    <string name="update">Update</string>
    <string name="btn_answer">Choice</string>

    <string name="succesfull_add">Vocabulary added.</string>
    <string name="successfull_update">Vocabulary updated.</string>

    <string name="add_new_vocabulary">Add New Vocabulary</string>
    <string name="update_new_vocabulary">Update Vocabulary</string>

    <string name="please_enter_a_vocabulary">Please enter a vocabulary.</string>

    <string name="add_neww_vocabulary">Add new vocabulary</string>

    <!-- On Board -->
    <string name="get_started">Get started</string>
    <string name="next">Next</string>

    <string name="onboard_title1">Welcome to Vocabulary Notebook</string>
    <string name="onboard_title2">Add your first vocabulary</string>
    <string name="onboard_description1">You can write down the words in the language you want to learn and their translations in your own language.</string>
    <string name="onboard_description2">You can add sample sentences for the words you have noted and update them whenever you want. We wish you the best in your learning process.</string>

</resources>