<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presenter.view.onboarding.screens.FirstScreen"
    android:orientation="vertical">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        android:src="@drawable/on_board_image1"
        />

    <TextView
        android:id="@+id/title_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onboard_title1"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:fontFamily="@font/myfont"
        android:layout_gravity="center"
        android:textSize="@dimen/_20ssp"
        android:layout_marginTop="@dimen/_15sdp"
        android:gravity="center"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"/>

    <TextView
        android:id="@+id/description_TV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/onboard_description1"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:textColor="@color/on_board_descripton"
        android:fontFamily="@font/montserratmedium"
        />



    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />


    <LinearLayout
        android:id="@+id/progressAndButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/_50sdp"

        >
        <LinearLayout
            android:id="@+id/progressBars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_30sdp"

            >
            <View
                android:layout_width="@dimen/_22sdp"
                android:layout_height="@dimen/_9sdp"
                android:background="@drawable/button_background"
                android:layout_margin="@dimen/_1sdp"
                />
            <View
                android:layout_width="@dimen/_11sdp"
                android:layout_height="@dimen/_9sdp"
                android:background="@drawable/button_background"
                android:layout_margin="@dimen/_1sdp"
                android:backgroundTint="@color/on_board_progress"
                />


        </LinearLayout>

        <Button
            android:id="@+id/next1"

            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_35sdp"
            android:text="@string/next"
            android:textColor="@color/white"
            android:background="@drawable/button_background"
            android:gravity="center"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:textSize="@dimen/_12ssp"

            />

    </LinearLayout>


</LinearLayout>